// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FieldsList - Display correctly a string field 1`] = `
<div class="tlp-form-element"><label class="tlp-label" for="input-1">custom field <i class="fa-solid fa-asterisk"></i></label><input type="text" class="tlp-input tlp-input-large" id="input-1" required="">
  <p class="tlp-text-info">a helpful description</p>
</div>
`;

exports[`FieldsList - Display correctly a text field 1`] = `
<div class="tlp-form-element"><label class="tlp-label" for="input-1">custom field <i class="fa-solid fa-asterisk"></i></label><textarea class="tlp-textarea tlp-textarea-large" id="textaarea-1" required=""></textarea>
  <p class="tlp-text-info">a helpful description</p>
</div>
`;
